# ucllm_nedo_prod

./: .gitignore  model_info.csv  pyproject.toml
data_management/: requirements.txt
data_management/preprocessing/filtering/: __main__.py
pipeline/0_download_dirty_datasets/download_dirty_datasets/: loaders.py  main.py
pipeline/1_preprocessing/preprocessing/: __main__.py  custom_document_filters.py
pipeline/4_dedup_dataset/src/: dedup.py
pipeline/readme/: README-train_gcp_play_single_node_multi_gpu.md
pipeline/step00_download_datasets/download_datasets/: main.py
pipeline/step0_download_datasets/download_datasets/: dataScrapeing.ipynb  loaders.py
pipeline/step0_download_upload_datasets/download_dirty_datasets/: main.py
pipeline/step0_preprocessing/: README.md  tear.py
pipeline/step0_preprocessing/preprocessing/: __main__.py  adult_embedding_avg.npy  custom_document_filters.py
pipeline/step0_preprocessing/upload_preprocessed_datasets/: upload_datasets.ipynb
pipeline/step1_merge_datasets/merge_datasets/: loaders.py  main.py  record_distributor.py  record_merge.py
pipeline/step1_merge_datasets/upload_merged_datasets/: upload_datasets.ipynb
pipeline/step1_preprocessing/preprocessing/: __main__.py
pipeline/step1_preprocessing/upload_preprocessed_datasets/: upload_datasets.ipynb
pipeline/step2_dedup_dataset/dedup/: dedup.py
pipeline/step5_upload_pretrained_model/: convert_tokenizer_and_pretrained_model_to_huggingface_transformers.sh  convert_tokenizer_from_sentencepiece_to_huggingface_transformers.py
train/: README-train_nishijima.md
(+62 files in other folders)
